# qwik-optimizer

./: .gitignore  Cargo.toml  README.md  task list.md
.planning/: PROJECT.md  (+3 more)
napi/: Cargo.toml
napi/src/: lib.rs
optimizer/: Cargo.toml
optimizer/src/: code_move.rs  collector.rs  config.rs  const_replace.rs  dead_code.rs  entry_strategy.rs  illegal_code.rs  import_clean_up.rs  inlined_fn.rs  is_const.rs  js_lib_interface.rs  lib.rs  macros.rs  package_json.rs  processing_failure.rs  props_destructuring.rs  ref_counter.rs  segment.rs  source.rs  spec_parity_tests.rs  transform.rs  transform_tests.rs  transpiler.rs
optimizer/src/component/: component.rs  id.rs  mod.rs  qrl.rs  segment_data.rs  shared.rs  source_info.rs
optimizer/src/ext/: ast_builder_ext.rs  expression_ext.rs
optimizer/src/snapshots/: qwik_optimizer__js_lib_interface__tests__example_1.snap  qwik_optimizer__js_lib_interface__tests__example_11.snap  qwik_optimizer__js_lib_interface__tests__example_2.snap  qwik_optimizer__js_lib_interface__tests__example_3.snap  qwik_optimizer__js_lib_interface__tests__example_4.snap  qwik_optimizer__js_lib_interface__tests__example_5.snap  qwik_optimizer__js_lib_interface__tests__example_6.snap  qwik_optimizer__js_lib_interface__tests__example_7.snap  qwik_optimizer__js_lib_interface__tests__example_8.snap  qwik_optimizer__js_lib_interface__tests__example_capture_imports.snap  qwik_optimizer__js_lib_interface__tests__example_capturing_fn_class.snap  qwik_optimizer__js_lib_interface__tests__example_jsx.snap  qwik_optimizer__js_lib_interface__tests__example_ts.snap  qwik_optimizer__js_lib_interface__tests__qrl_basic_arrow.snap  qwik_optimizer__js_lib_interface__tests__qrl_function_declaration.snap  qwik_optimizer__js_lib_interface__tests__qrl_multiple_qrls.snap  qwik_optimizer__js_lib_interface__tests__qrl_nested_component.snap  qwik_optimizer__js_lib_interface__tests__qrl_ternary.snap  qwik_optimizer__js_lib_interface__tests__qrl_with_captures.snap  qwik_optimizer__js_lib_interface__tests__test_project_1.snap  (+192 more)
optimizer/tests/: snapshot_verify.rs
(+378 files in other folders)
