[package]
name = "qwik-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc = { version = "*", features = ["full"] }
thiserror = "2.0.11"
base64 = "0.22.1"
anyhow = "1.0.95"
path-slash = "0.2.1"
markup5ever = "0.14.1"
html5ever = "0.29.1"
markup5ever_rcdom = "0.5.0-unofficial"
serde_json = "1.0.138"
