[package]
name = "qwik-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_index = "2.0.0"
oxc_parser = "0.52.0"
oxc_ast = "0.52.0"
oxc_codegen = "0.52.0"
oxc_allocator = "0.52.0"
oxc_semantic = "0.52.0"
oxc_span = "0.52.0"
oxc_traverse = "0.52.0"
thiserror = "2.0.11"
base64 = "0.22.1"
markup5ever = "0.14.1"
html5ever = "0.29.1"
markup5ever_rcdom = "0.5.0-unofficial"
oxc_minifier = "0.52.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2.1"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }
#biome_js_formatter = "0.5.7"
