[package]
name = "qwik-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
base64 = "0.22.1"
oxc_index = "3.0.0"
oxc_parser = "0.63.0"
oxc_ast = "0.63.0"
oxc_codegen = "0.63.0"
oxc_allocator = "0.63.0"
oxc_semantic = "0.63.0"
oxc_span = "0.63.0"
oxc_traverse = "0.63.0"
oxc_minifier = "0.63.0"
oxc_ast_visit = "0.63.0"
oxc_syntax = "0.63.0"
oxc_transformer = "0.63.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }
#biome_js_formatter = "0.5.7"
